holyc-parser/tests/corpus/passing/093-stmt-stmt-switch-case-range.hc
U0 SE_swr() { I64 x=1; switch (x) { case 1...3: break; default: break; } }
