holyc-parser/tests/corpus/failing/024-bug-compat-bug511-switch-range-huge.hc
U0 B511_f() { I64 x=0; switch (x) { case 0...0x20000: break; default: break; } }
